# ctr-bcres

./: .gitignore  Cargo.toml
gui/: Cargo.toml
gui/res/: alpha_discard.fs
gui/src/: gfx_model.rs  main.rs  material.rs  mesh.rs  scene.rs
src/: cgfx_container.rs  image_codec.rs  lib.rs  main.rs  model.rs  tests.rs  texture.rs  wavefront.rs
src/bcres/: bcres.rs  material.rs  mod.rs  model.rs  texture.rs  util.rs
src/bcres/model/: material.rs  mesh.rs  skeleton.rs
src/model/: material.rs  mesh.rs  mod.rs  model.rs  skeleton.rs
src/util/: blz.rs  math.rs  mod.rs  pointer.rs  util.rs
