[package]
name = "ctr-bcres"
description = "A library for the Nintendo 3DS's bcres file format"
authors = ["Darxoon"]
repository = "https://github.com/Darxoon/ctr-bcres"
homepage = "https://github.com/Darxoon/ctr-bcres"
license = "bsd-2-clause"
readme = "readme.md"
version = "1.0.0"
edition = "2021"
categories = ["parser-implementations", "data-structures", "game-development"]
keywords = ["nintendo", "modding", "3d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
array-init = "2.1.0"
binrw = "0.15.0"
bytemuck = { version = "1.23.0", optional = true }
byteorder = "1.4.3"
clap = { version = "4.3.15", features = ["derive"] }
md5 = { version = "0.7.0" }
na = "0.32.2"
png = "0.17.13"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde-binary = "0.5.0"
serde_yaml = "0.9.27"
