[package]
name = "ctr-bcres"
description = "A library for the Nintendo 3DS's bcres file format"
authors = ["Darxoon"]
repository = "https://github.com/Darxoon/ctr-bcres"
homepage = "https://github.com/Darxoon/ctr-bcres"
license = "bsd-2-clause"
readme = "readme.md"
version = "1.0.0"
edition = "2021"
categories = ["parser-implementations", "data-structures", "game-development"]
keywords = ["nintendo", "modding", "3d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
array-init = "2.1.0"
binrw = "0.15.0"
bytemuck = { version = "1.25.0", optional = true }
byteorder = "1.4.3"
glam = { version = "0.25.0", optional = true }
md5 = { version = "0.8.0" }
png = { version = "0.18.0", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"], optional = true }

[features]
png = ["dep:png"]
serde = ["dep:serde"]
glam = ["dep:glam"]
